[package]
name = "caledonia"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Approximate Lower Bound Arguments (ALBAs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"
unsafe_code = "warn"
