[package]
name = "alba"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Approximate Lower Bound Arguments (ALBAs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
rand = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]}
test-case = "3.3.1"
time-elapsed = "0.1.0"
rand_core = "0.9.0"
rand_chacha = "0.9.0"
blst = "0.3.13"
blake2 = "0.10.6"
sha2 = "0.10.6"

[[bench]]
name = "centralized_proving_time"
harness = false
path = "benches/centralized_telescope/proving_time.rs"

[[bench]]
name = "centralized_verifying_time"
harness = false
path = "benches/centralized_telescope/verifying_time.rs"

[[bench]]
name = "centralized_number_steps"
harness = false
path = "benches/centralized_telescope/number_steps.rs"

[[bench]]
name = "centralized_proof_size"
harness = false
path = "benches/centralized_telescope/proof_size.rs"

[[bench]]
name = "simple_lottery_proving_time"
harness = false
path = "benches/simple_lottery/proving_time.rs"

[[bench]]
name = "simple_lottery_verifying_time"
harness = false
path = "benches/simple_lottery/verifying_time.rs"

[[bench]]
name = "simple_lottery_proof_size"
harness = false
path = "benches/simple_lottery/proof_size.rs"

[lints.rust]
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing_docs = "warn"
non-ascii-idents = "forbid"
redundant-imports = "warn"
redundant-lifetimes = "warn"
unit-bindings = "warn"
unnameable-types = "warn"
unsafe_code = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
arithmetic_side_effects = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
derive_partial_eq_without_eq = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
semicolon_if_nothing_returned = "deny"
similar_names = "allow"
