cabal-version:      3.0
name:               alba
version:            0.1.0.0
synopsis:           Approximate Lower Bound Arguments
license:            Apache-2.0
license-file:       LICENSE
author:             Arnaud Bailly <arnaud.bailly@iohk.io>
maintainer:         Arnaud Bailly <arnaud.bailly@iohk.io>
category:           Network
build-type:         Simple
extra-source-files: README.md

flag dump
  manual:  True
  default: True

common warnings
    ghc-options: -Wall -Wunused-packages -Werror
                 -fno-warn-missing-pattern-synonym-signatures
                 -fno-warn-missing-signatures
                 -fno-warn-name-shadowing
                 -fno-warn-type-defaults
                 -fno-warn-unused-imports
                 -fno-warn-unused-matches

library
  import:           warnings
  exposed-modules:    ALBA
  hs-source-dirs:     src
  build-depends:
    , base               >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cereal
    , deepseq
    , QuickCheck

  default-extensions: StrictData
  default-language:   Haskell2010
  extra-libraries:    sodium
  include-dirs:       cbits
  includes:           cbits/blake2b.h
  c-sources:          cbits/blake2b.c

  if flag(dump)
    ghc-options: -ddump-simpl -ddump-stg-final -ddump-to-file

executable alba
  import:           warnings
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
                      QuickCheck
                , alba
                , base
                , bytestring
                , directory
                , filepath

  ghc-options:    -threaded -rtsopts

test-suite test
  import:           warnings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      ALBASpec
  build-depends:
                  QuickCheck
                , alba
                , base                  >=4.9 && <5
                , bytestring
                , cereal
                , directory
                , hspec
                , quickcheck-instances

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -rtsopts -threaded

benchmark bench
  import:           warnings
  hs-source-dirs: bench/
  main-is:        ALBABench.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , alba
    , base
    , bytestring
    , criterion
    , deepseq
    , QuickCheck

  ghc-options:    -threaded -rtsopts
