[package]
name = "caledonia"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Approximate Lower Bound Arguments (ALBAs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
rand_core = "0.6.4"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bounded_time"
harness = false